--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4F6200EE</color>
-    <color name="colorPrimaryDark">#4D3700B3</color>
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
     <color name="transperant_status">#33000000</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="dashboard">#5B37B7</color>
