--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/news"
     tools:context=".NewsFragment">
 
 
@@ -37,6 +36,64 @@
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_rectangular_card"
+        android:orientation="horizontal"
+        android:elevation="2dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
+
+        <ImageView
+            android:id="@+id/news1"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:src="@color/death_case"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="26 March 2020 | News Release"
+                android:textColor="@android:color/black"
+                android:fontFamily="@font/roboto_thin"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="68-year-old man dies of coronavirus in Kerala"
+                android:textColor="@android:color/black"
+                android:fontFamily="@font/roboto_bold"
+                android:textSize="18sp" />
+
+            <TextView
+                android:gravity="right"
+                android:textColor="@color/death_case"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Read More"/>
+
+        </LinearLayout>
+
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
