--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -10,6 +10,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/death_case"
         android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
         <androidx.appcompat.widget.Toolbar
@@ -19,12 +20,14 @@
 
 
             <TextView
-                android:layout_width="wrap_content"
+                android:fontFamily="@font/roboto_bold"
+                android:layout_width="match_parent"
+                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="Dashboard"
                 android:textColor="@color/bottom_nav_background"
-                android:textSize="26sp"/>
+                android:textSize="24sp"/>
 
         </androidx.appcompat.widget.Toolbar>
 
