--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
 
 
     <color name="reported_case">#00d43d</color>
-    <color name="death_case">#c81913</color>
+    <color name="death_case">#2561EE</color>
     <color name="recovery_case">#6cf7ec</color>
 
 </resources>
